ejecuciones.txt
lu4199@cc191:~/datos/homes.rala/LPP/prct03B$ irb
2.0.0p247 :001 > "\t\n"
 => "\t\n" 
2.0.0p247 :002 > '\t\n'
 => "\\t\\n" 
2.0.0p247 :003 > %q{hello world\n}
 => "hello world\\n" 
2.0.0p247 :004 > %q{'a''b''c'}
 => "'a''b''c'" 
2.0.0p247 :005 > %Q{hello world\n}
 => "hello world\n" 
2.0.0p247 :006 > %Q{'a''b''c'}
 => "'a''b''c'" 
2.0.0p247 :007 > a = 4
 => 4 
2.0.0p247 :008 > b = 2
 => 2 
2.0.0p247 :009 > c = <<HERE
2.0.0p247 :010"> --#{a}--
2.0.0p247 :011"> --#{b}--
2.0.0p247 :012"> HERE
 => "--4--\n--2--\n" 
2.0.0p247 :013 > c = <<'HERE'
2.0.0p247 :014'> --#{a}--
2.0.0p247 :015'> --#{b}--
2.0.0p247 :016'> HERE
 => "--\#{a}--\n--\#{b}--\n" 
2.0.0p247 :017 > s = "hello"
 => "hello" 
2.0.0p247 :018 > S[0,2]
NameError: uninitialized constant S
	from (irb):18
	from /usr/local/rvm/rubies/ruby-2.0.0-p247/bin/irb:13:in `<main>'
2.0.0p247 :019 > s[0,2]
 => "he" 
2.0.0p247 :020 > s[-1,1]
 => "o" 
2.0.0p247 :021 > s[0,10]
 => "hello" 
2.0.0p247 :022 > s << " world"
 => "hello world" 
2.0.0p247 :023 > e = '.'*3
 => "..." 
2.0.0p247 :024 > a=1
 => 1 
2.0.0p247 :025 > "#{a=a+1} "*3
 => "2 2 2 " 
2.0.0p247 :026 > %w[this is a test]
 => ["this", "is", "a", "test"] 
2.0.0p247 :027 > %[\t\n]
 => "\t\n" 
2.0.0p247 :028 > %[\t \n]
 => "\t \n" 
2.0.0p247 :029 > %w[\t \n]
 => ["\\t", "\\n"] 
2.0.0p247 :030 > %W[\t \n]
 => ["\t", "\n"] 
2.0.0p247 :031 > nils = Array.new(3)
 => [nil, nil, nil] 
2.0.0p247 :032 > zeros = Array.new(3,0)
 => [0, 0, 0] 
2.0.0p247 :033 > x = [[1,2],[3,4]]
 => [[1, 2], [3, 4]] 
2.0.0p247 :034 > b = Array.new(x)
 => [[1, 2], [3, 4]] 
2.0.0p247 :035 > b
 => [[1, 2], [3, 4]] 
2.0.0p247 :036 > c = Array.new(3) {|1| 2*i}
SyntaxError: (irb):36: syntax error, unexpected tINTEGER, expecting '|'
c = Array.new(3) {|1| 2*i}
                    ^
(irb):36: syntax error, unexpected '}', expecting end-of-input
	from /usr/local/rvm/rubies/ruby-2.0.0-p247/bin/irb:13:in `<main>'
2.0.0p247 :037 > c = Array.new(3) { |1| 2*i }
SyntaxError: (irb):37: syntax error, unexpected tINTEGER, expecting '|'
c = Array.new(3) { |1| 2*i }
                     ^
(irb):37: syntax error, unexpected '}', expecting end-of-input
	from /usr/local/rvm/rubies/ruby-2.0.0-p247/bin/irb:13:in `<main>'
2.0.0p247 :038 > c = Array.new(3) [ |1| 2*i ]
SyntaxError: (irb):38: syntax error, unexpected '|', expecting ']'
c = Array.new(3) [ |1| 2*i ]
                    ^
(irb):38: syntax error, unexpected ']', expecting end-of-input
	from /usr/local/rvm/rubies/ruby-2.0.0-p247/bin/irb:13:in `<main>'
2.0.0p247 :039 > c = Array.new(3) ( |1| 2*i )
SyntaxError: (irb):39: syntax error, unexpected '(', expecting end-of-input
c = Array.new(3) ( |1| 2*i )
                  ^
	from /usr/local/rvm/rubies/ruby-2.0.0-p247/bin/irb:13:in `<main>'
2.0.0p247 :040 > c = Array.new(3) { |1| 2*i }
SyntaxError: (irb):40: syntax error, unexpected tINTEGER, expecting '|'
c = Array.new(3) { |1| 2*i }
                     ^
(irb):40: syntax error, unexpected '}', expecting end-of-input
	from /usr/local/rvm/rubies/ruby-2.0.0-p247/bin/irb:13:in `<main>'
2.0.0p247 :041 > c = Array.new(3) { |i| 2*i }
 => [0, 2, 4] 
2.0.0p247 :042 > a = ('a'..'e').to_a
 => ["a", "b", "c", "d", "e"] 
2.0.0p247 :043 > a[1,1]
 => ["b"] 
2.0.0p247 :044 > a[-2,2]
 => ["d", "e"] 
2.0.0p247 :045 > a[0...1]
 => ["a"] 
2.0.0p247 :046 > a[-2..-1]
 => ["d", "e"] 
2.0.0p247 :047 > a[0,2] = %w{A B}
 => ["A", "B"] 
2.0.0p247 :048 > a
 => ["A", "B", "c", "d", "e"] 
2.0.0p247 :049 > a[2..5]= %w{C D E}
 => ["C", "D", "E"] 
2.0.0p247 :050 > a
 => ["A", "B", "C", "D", "E"] 
2.0.0p247 :051 > a[0,0]= [1,2,3]
 => [1, 2, 3] 
2.0.0p247 :052 > a
 => [1, 2, 3, "A", "B", "C", "D", "E"] 
2.0.0p247 :053 > a[0,2]
 => [1, 2] 
2.0.0p247 :054 > a[0,2] = []
 => [] 
2.0.0p247 :055 > a
 => [3, "A", "B", "C", "D", "E"] 
2.0.0p247 :056 > a[-1,1] = ['Z']
 => ["Z"] 
2.0.0p247 :057 > a
 => [3, "A", "B", "C", "D", "Z"] 
2.0.0p247 :058 > a[-2,2] = nil
 => nil 
2.0.0p247 :059 > a
 => [3, "A", "B", "C", nil] 
2.0.0p247 :060 > a = (1...4).to_a
 => [1, 2, 3] 
2.0.0p247 :061 > a = a + [4,5]
 => [1, 2, 3, 4, 5] 
2.0.0p247 :062 > a += [[6,7,8]]
 => [1, 2, 3, 4, 5, [6, 7, 8]] 
2.0.0p247 :063 > a = a +9
TypeError: no implicit conversion of Fixnum into Array
	from (irb):63:in `+'
	from (irb):63
	from /usr/local/rvm/rubies/ruby-2.0.0-p247/bin/irb:13:in `<main>'
2.0.0p247 :064 > a = a + 9
TypeError: no implicit conversion of Fixnum into Array
	from (irb):64:in `+'
	from (irb):64
	from /usr/local/rvm/rubies/ruby-2.0.0-p247/bin/irb:13:in `<main>'
2.0.0p247 :065 > x = %w{a b c b a}
 => ["a", "b", "c", "b", "a"] 
2.0.0p247 :066 > x = x - %w{b c d}
 => ["a", "a"] 
2.0.0p247 :067 > x
 => ["a", "a"]
